- Unaprijeđen proces internacionalizacije, sve Alert i Warning poruke implementirane da podržavaju više jezika - Dodana mogućnost izbora jezika u poćetnom view-u

--- a/resources/Translation_bs_BA.properties
+++ b/resources/Translation_bs_BA.properties
@@ -1,18 +1,18 @@
-headline=Dobrodo?li u eHealth
-accountTypeMsg=Izaberite tip ra?una kojem ?elite da pristupite:
-userAcc=Korisni?ki ra?un
-apotAcc=Ra?un za apoteke
-regMsg=Ako trenutno nemate ra?un, morate prvo da se registrujete!
-createAcc=Kreiraj ra?un
+headline=Dobrodošli u eHealth
+accountTypeMsg=Izaberite tip računa kojem želite da pristupite:
+userAcc=Korisnički račun
+apotAcc=Račun za apoteke
+regMsg=Ako trenutno nemate račun, morate prvo da se registrujete!
+createAcc=Kreiraj račun
 exit=Zatvori
 frName=Ime:
 scName=Prezime:
-username=Korisni?ko ime:
+username=Korisničko ime:
 password=Lozinka:
 email=E-mail:
 dName=Ime doktora:
 dSurname=Prezime doktora:
-allergyMsg=Ozna?ite kutije pored alergija koje imate:
+allergyMsg=Označite kutije pored alergija koje imate:
 aspAllergy=Alergija na aspirin
 abAllergy=Alergija na antibiotike
 nsiAllergy=Alergija na ne-steroidske lijekove za upalu
@@ -26,6 +26,27 @@ apotName=Naziv apoteke:
 phone=Kontakt telefon:
 address=Adresa:
 enterInf=Unesite svoje podatke:
-accType2=Izaberite tip ra?una koji ?elite
+accType2=Izaberite tip računa koji želite
 login=Prijavi se
-logAcc=Prijavi se na svoj ra?un
+logAcc=Prijavi se na svoj račun
+errorLoginHeadline=Pogrešna lozinka ili korisničko ime
+errorLoginContent=Uneseno korisničko ime ili lozinka nisu tačni. Jeste li sigurni da imate kreiran račun?
+errorLoginHeadline2=Pogrešna lozinka ili ime apoteke
+errorLoginContent2=Uneseno ime apoteke ili lozinka nisu tačni. Jeste li sigurni da imate kreiran račun?
+errorRegisteringNameTakenHeadline=Korisničko ime zauzeto!
+errorRegisteringNameTakenContent=Uneseno korisničko ime je već korišteno. Molimo vas da izaberete drugo korisničko ime!
+errorRegisteringNameTakenHeadline2=Ime zauzeto!
+errorRegisteringNameTakenContent2=Uneseno ime apoteke je već korišteno. Molimo vas da izaberete drugo ime apoteke!
+invalid=Nekorektno
+ent=Uneseno
+errorMsgEasy=je nekorektno. Mora biti između 3 i 24 karaktera!
+errorMsgHard=je nekorektno. Mora biti između 3 i 24 karaktera i sadržavati samo znakove A-Z I a-z!
+nameRU=ime
+surnameRU=prezime
+usernameRU=korisničko ime
+passwordRU=lozinka
+doctor_nameRU=doktorovo ime
+doctor_surnameRU=doktorovo prezime
+addressRU=adresa
+phoneRU=broj telefona
+lgChoose=Izaberite jezik koji želite:
