--- a/resources/Translation_en_US.properties
+++ b/resources/Translation_en_US.properties
@@ -29,3 +29,24 @@ enterInf=Enter your information:
 accType2=Choose the type of an account you want
 login=Login
 logAcc=Login to your account
+errorLoginHeadline=Username and password don't match
+errorLoginContent=The entered username and password don't match. Are you sure you already have an account?
+errorLoginHeadline2=Apothecary name and password don't match
+errorLoginContent2=The entered name and password don't match. Are you sure you already have an account?
+errorRegisteringNameTakenHeadline=Username taken!
+errorRegisteringNameTakenContent=The entered username is already being used. Please use a different one!
+errorRegisteringNameTakenHeadline2=Name already taken!
+errorRegisteringNameTakenContent2=The entered name of an apothecary is already being used. Please use a different one!
+invalid=Invalid
+ent=The entered
+errorMsgEasy=is invalid. It has to be between 3 and 24 characters!
+errorMsgHard=is invalid. It has to be between 3 and 24 characters and contain only letters A-Z and a-z!
+nameRU=name
+surnameRU=surname
+usernameRU=username
+passwordRU=password
+doctor_nameRU=doctor name
+doctor_surnameRU=doctor surname
+addressRU=address
+phoneRU=contact phone
+lgChoose=Choose the language you want:
