- Dodani fxml za glavnu stranicu aplikacije kao i njihovi kontroleri - Dodan fxml drug_add.fxml i njegov respektivni konrtoler - Implementirana mogućnost dodavanja novih lijekova - Implementirana mogućnost dodavanja slike lijeku

--- a/resources/Translation_bs_BA.properties
+++ b/resources/Translation_bs_BA.properties
@@ -50,3 +50,18 @@ doctor_surnameRU=doktorovo prezime
 addressRU=adresa
 phoneRU=broj telefona
 lgChoose=Izaberite jezik koji želite:
+drugInf=Unesite podatke o lijeku:
+nameEng=Ime(Engleski):
+nameBos=Ime(Bosanski):
+nameLat=Ime(Latinski):
+content=Sadržaj:
+purpose=Efekt lijeka:
+expDate=Rok trajanja:
+price=Cijena:
+clear=Očisti
+upload=Postavi fotogorafiju
+add=Dodaj
+addDrug=Dodaj novi lijek
+nameBOSRU=ime(Bosanski)
+nameENGRU=ime(Engleski)
+nameLATRU=ime(Latinski)
