--- a/resources/Translation_en_US.properties
+++ b/resources/Translation_en_US.properties
@@ -50,3 +50,18 @@ doctor_surnameRU=doctor surname
 addressRU=address
 phoneRU=contact phone
 lgChoose=Choose the language you want:
+drugInf=Enter the information of the drug:
+nameEng=Name(English):
+nameBos=Name(Bosnian):
+nameLat=Name(Latin):
+content=Content:
+purpose=Drug effect:
+expDate=Expiration date:
+price=Price:
+clear=Clear
+upload=Upload an image
+add=Add
+addDrug=Add new drug
+nameBOSRU=name(Bosnian)
+nameENGRU=name(English)
+nameLATRU=name(Latin)
