- Fxml fajl main_apothecary.fxml unaprijeđen, te dodana lista svih lijekova koje je apoteka, koja posjeduje račun objavila. - Izvršene prepravke u model klasi Drug - Izvršene prepravke u enum klasi AdministrationTypes

--- a/resources/Translation_bs_BA.properties
+++ b/resources/Translation_bs_BA.properties
@@ -65,3 +65,12 @@ addDrug=Dodaj novi lijek
 nameBOSRU=ime(Bosanski)
 nameENGRU=ime(Engleski)
 nameLATRU=ime(Latinski)
+file=File
+help=Pomoć
+logout=Odjava
+about=O nama
+keyboardShortcuts=Tastaturske skraćenice
+editDrug=Uredi lijek
+deleteDrug=Obriši lijek
+totalProfit=Totalni profit:
+administrationType=Način unosa lijeka:
