--- a/resources/Translation_en_US.properties
+++ b/resources/Translation_en_US.properties
@@ -65,3 +65,12 @@ addDrug=Add new drug
 nameBOSRU=name(Bosnian)
 nameENGRU=name(English)
 nameLATRU=name(Latin)
+file=File
+help=Help
+logout=Logout
+about=About
+keyboardShortcuts=Keyboard shortcuts
+editDrug=Edit drug
+deleteDrug=Delete drug
+totalProfit=Total profit:
+administrationType=Administration type:
