- Implementirane funkcionalnosti vezane sa korisnički račun. - Model klasa ShoppingList.java obrisana - Model klasa Item.java promjenjena - U DAO klase dodane nove metode

--- a/resources/Translation_bs_BA.properties
+++ b/resources/Translation_bs_BA.properties
@@ -75,3 +75,14 @@ deleteDrug=Obriši lijek
 totalProfit=Totalni profit:
 administrationType=Način unosa lijeka:
 save=Snimi
+nameEngTB=Naziv(Engleski)
+nameLatTB=Naziv(Latinski)
+priceTB=Cijena
+quantityTB=Količina
+totalTB=Total
+yourCheckout=Isplata
+totalPrice=Finalna cijena:
+buyMenu=Kupi
+editAcc=Uredi račun
+removeDrug=Ukloni lijek
+checkout=Isplata
