--- a/resources/Translation_en_US.properties
+++ b/resources/Translation_en_US.properties
@@ -75,3 +75,14 @@ deleteDrug=Delete drug
 totalProfit=Total profit:
 administrationType=Administration type:
 save=Save
+nameEngTB=Name(English)
+nameLatTB=Name(Latin)
+priceTB=Price
+quantityTB=Quantity
+totalTB=Total price
+yourCheckout=Checkout
+totalPrice=Total price:
+buyMenu=Buy menu
+editAcc=Edit account
+removeDrug=Remove drug
+checkout=Checkout
