- Dodan novi fxml fajl search_menu.fxml i njegov respektivnu kontroler - Implementirana funkcionalnost pretrage artikala od strane kupca - Implementirana funkcionalnost dodavanja artikala u korpu

--- a/resources/Translation_bs_BA.properties
+++ b/resources/Translation_bs_BA.properties
@@ -86,3 +86,10 @@ buyMenu=Kupi
 editAcc=Uredi račun
 removeDrug=Ukloni lijek
 checkout=Isplata
+search=Pretraži
+photo=Fotografija:
+amount=Količina:
+enterAmount=Unesite količinu ovdje...
+addToCheckout=Dodaj u korpu
+confirmationTitle=Potvrda kupovine
+confirmationContent=Jeste li sigurni da želite kupiti ovaj lijek?
