--- a/resources/Translation_en_US.properties
+++ b/resources/Translation_en_US.properties
@@ -86,3 +86,10 @@ buyMenu=Buy menu
 editAcc=Edit account
 removeDrug=Remove drug
 checkout=Checkout
+search=Search
+photo=Image:
+amount=Amount:
+enterAmount=Enter amount here...
+addToCheckout=Add to basket
+confirmationTitle=Confirm buy
+confirmationContent=Are you sure you want to buy this product?
