- Dodan novi fxml fajl edit_account_user.fxml.fxml i njegov respektivnu kontroler. - Implementirana funkcionalnost editovanja korisničkog računa. - Dodan novi top izuzetka IllegalAllergyType - Klasa Allergies unaprijeđena.

--- a/resources/Translation_bs_BA.properties
+++ b/resources/Translation_bs_BA.properties
@@ -93,3 +93,4 @@ enterAmount=Unesite količinu ovdje...
 addToCheckout=Dodaj u korpu
 confirmationTitle=Potvrda kupovine
 confirmationContent=Jeste li sigurni da želite kupiti ovaj lijek?
+accountInformation=Podatci vašeg računa:
