--- a/resources/Translation_en_US.properties
+++ b/resources/Translation_en_US.properties
@@ -93,3 +93,4 @@ enterAmount=Enter amount here...
 addToCheckout=Add to basket
 confirmationTitle=Confirm buy
 confirmationContent=Are you sure you want to buy this product?
+accountInformation=Your account information:
