- Implementirana funkcionalnost kupovine - Dodane funkcionalnosti menija u fxml fajlovima main_apothecary.fxml i main_user.fxml - Omogućena promjena jezika na glavnim stranica

--- a/resources/Translation_bs_BA.properties
+++ b/resources/Translation_bs_BA.properties
@@ -61,7 +61,7 @@ price=Cijena:
 clear=Očisti
 upload=Postavi fotogorafiju
 add=Dodaj
-addDrug=Dodaj novi lijek
+addDrug=Dodaj lijek
 nameBOSRU=ime(Bosanski)
 nameENGRU=ime(Engleski)
 nameLATRU=ime(Latinski)
@@ -80,7 +80,7 @@ nameLatTB=Naziv(Latinski)
 priceTB=Cijena
 quantityTB=Količina
 totalTB=Total
-yourCheckout=Isplata
+yourCheckout=Lijekovi u vašoj košarici:
 totalPrice=Finalna cijena:
 buyMenu=Kupi
 editAcc=Uredi račun
@@ -94,3 +94,8 @@ addToCheckout=Dodaj u korpu
 confirmationTitle=Potvrda kupovine
 confirmationContent=Jeste li sigurni da želite kupiti ovaj lijek?
 accountInformation=Podatci vašeg računa:
+errorNoAmountHeader=Količina nije unesena!
+errorNoAmountContent=Količina nije unesena. Molimo vas da unesete količinu i pokušate ponovo!
+errorInvalidAmountHeader=Ilegalna količina!
+errorInvalidAmountContent=Količina koju ste unijeli se smatra za nevalidnom. Molimo pokušajte opet!
+language=Jezik
