--- a/resources/Translation_en_US.properties
+++ b/resources/Translation_en_US.properties
@@ -80,7 +80,7 @@ nameLatTB=Name(Latin)
 priceTB=Price
 quantityTB=Quantity
 totalTB=Total price
-yourCheckout=Checkout
+yourCheckout=Items in your basket:
 totalPrice=Total price:
 buyMenu=Buy menu
 editAcc=Edit account
@@ -94,3 +94,8 @@ addToCheckout=Add to basket
 confirmationTitle=Confirm buy
 confirmationContent=Are you sure you want to buy this product?
 accountInformation=Your account information:
+errorNoAmountHeader=Amount not entered!
+errorNoAmountContent=Amount not specified. Please insert the amount and try again!
+errorInvalidAmountHeader=Invalid amount!
+errorInvalidAmountContent=The amount you entered is considered invalid. Please insert a correct amount!
+language=Language
