- Implmentirana podrška "dark-theme" temi - Implementirana funkcionalnost odabira načina plaćanja svoje košarice - Izvršene preprave u poćetnom view-u

--- a/resources/Translation_bs_BA.properties
+++ b/resources/Translation_bs_BA.properties
@@ -99,3 +99,14 @@ errorNoAmountContent=Količina nije unesena. Molimo vas da unesete količinu i p
 errorInvalidAmountHeader=Ilegalna količina!
 errorInvalidAmountContent=Količina koju ste unijeli se smatra za nevalidnom. Molimo pokušajte opet!
 language=Jezik
+darkTheme=Tamna tema
+theme=Tema
+lightTheme=Svjetla tema
+paymentTypeChoose=Izaberite način plaćanja
+paymentCard=Plaćanje kreditnom karticom
+delivery=Plaćanje pouzećem
+enterCreditCardNumber=Unesite broj kreditne kartice:
+confirmPayment=Ok
+cancel=Zatvori
+enterAddress=Unesite svoju adresu:
+view=Pogled
