--- a/resources/Translation_en_US.properties
+++ b/resources/Translation_en_US.properties
@@ -99,3 +99,14 @@ errorNoAmountContent=Amount not specified. Please insert the amount and try agai
 errorInvalidAmountHeader=Invalid amount!
 errorInvalidAmountContent=The amount you entered is considered invalid. Please insert a correct amount!
 language=Language
+darkTheme=Dark theme
+theme=Theme
+lightTheme=Light theme
+paymentTypeChoose=Choose the payment type you want
+paymentCard=Pay by credit card
+delivery=Pay upon delivery
+enterCreditCardNumber=Enter you credit card number:
+confirmPayment=Confirm
+cancel=Cancel
+enterAddress=Enter your address:
+view=View
