- Implementirana podrška za kretanje kroz aplikaciju koristeći tastaturu

--- a/resources/Translation_bs_BA.properties
+++ b/resources/Translation_bs_BA.properties
@@ -99,9 +99,11 @@ errorNoAmountContent=Količina nije unesena. Molimo vas da unesete količinu i p
 errorInvalidAmountHeader=Ilegalna količina!
 errorInvalidAmountContent=Količina koju ste unijeli se smatra za nevalidnom. Molimo pokušajte opet!
 language=Jezik
+themeDark=Tamna tema
 darkTheme=Tamna tema
 theme=Tema
 lightTheme=Svjetla tema
+themeLight=Svjetla tema
 paymentTypeChoose=Izaberite način plaćanja
 paymentCard=Plaćanje kreditnom karticom
 delivery=Plaćanje pouzećem
