--- a/resources/Translation_en_US.properties
+++ b/resources/Translation_en_US.properties
@@ -65,7 +65,7 @@ addDrug=Add new drug
 nameBOSRU=name(Bosnian)
 nameENGRU=name(English)
 nameLATRU=name(Latin)
-file=File
+file=_File
 help=Help
 logout=Logout
 about=About
@@ -101,6 +101,8 @@ errorInvalidAmountContent=The amount you entered is considered invalid. Please i
 language=Language
 darkTheme=Dark theme
 theme=Theme
+themeDark=Dark theme
+themeLight=Light theme
 lightTheme=Light theme
 paymentTypeChoose=Choose the payment type you want
 paymentCard=Pay by credit card
