- Implementirana pasivna validacija - Implementirana rigoroznija validacija - Dodana utility klasa Validator u kojoj se nalaze metode za validaciju

--- a/resources/Translation_bs_BA.properties
+++ b/resources/Translation_bs_BA.properties
@@ -113,3 +113,20 @@ cancel=Zatvori
 enterAddress=Unesite svoju adresu:
 view=Pogled
 printReport=Izvještaj isplate
+emailRU=eMail
+incorrectPhoneHeader=Nekorektan broj telefona!
+incorrectPhoneContent=Uneseni broj telefona je nekorektan. Brojevi telefona moraju sadržavati samo brojeve ili znakove '+' i '/'. Molimo unesite tačan broj telefona!
+invalidDateHeader=Nevalidan datum!
+invalidDateContent=Datum koji ste unijeli je nevalidan. Molimo unesite validan datum!
+invalidPriceHeader=Nevalidana cijena!
+invalidPriceContent=Cijena koju ste unijeli nije validna. Molimo unesite validnu cijenu!
+invalidImageHeader=Niste stavili sliku!
+invalidImageContent=Molimo vas da stavite sliku!
+invalidBoxHeader=Niste izabrali tip administracije!
+invalidBoxContent=Molimo vas da izaberete tip administracije!
+noPaymentPlanSelectionHeader=Greška!
+noPaymentPlanSelectionContent=Molimo vas da izaberete način plaćanja!
+enterCreditCardHeader=Greška!
+enterCreditCardContent=Molimo vas da unesete broj kreditne kartice!
+enterPAHeader=Greška!
+enterPAContent=Molimo vas da unesete adresu i broj telefona!
