- Implemenentirani FX testovi - Implementirani Mocking testovi

--- a/resources/Translation_bs_BA.properties
+++ b/resources/Translation_bs_BA.properties
@@ -130,3 +130,4 @@ enterCreditCardHeader=Greška!
 enterCreditCardContent=Molimo vas da unesete broj kreditne kartice!
 enterPAHeader=Greška!
 enterPAContent=Molimo vas da unesete adresu i broj telefona!
+welcome=Create property
